<resources>
    <string name="app_name">WalkySocial</string>
    <string name="title_activity_inscription">Inscription</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profil">Profil</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="boss">Boss</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pv">HP : %1$s / %2$s</string>
    <string name="defense">Defense : %1$s</string>
    <string name="attaque">Attack : %1$s</string>
    <string name="dodge">Dodge : %1$s</string>
    <string name="type">Type : %1$s</string>
    <string name="change_username">Change username</string>
    <string name="write_username">New username</string>
    <string name="sauvegarder">Save</string>
    <string name="settings">Settings</string>
    <string name="annuler">Cancel</string>
    <string name="deconnexion">Logout</string>
    <string name="supprimerVotreCompte">Delete your account</string>
    <string name="voulezvousVraimentSupprimerVotreCompte">Are you sure you want to delete your account?\n</string>
    <string name="Oui">Yes</string>
    <string name="Buy">Buy</string>
    <string name="Use">Use</string>
    <string name="Cost">Cost : </string>
    <string name="flecheHaut">▲</string>
    <string name="flecheBas">▼</string>
    <string name="Ouvrir">Open</string>
    <string name="Arreter">Stop</string>
    <string name="message_manqueArgent">You haven\'t enough coins to make this purchase! :)</string>
    <string name="message_manqueStock">Your stock is empty!</string>
    <string name="sec" translatable="false">%s sec</string>
</resources>